<resources>
    <string name="app_name">Tennistats</string>
    <string name="hint_username">Nombre de usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="text_button_login">Login</string>
    <string name="jugadorGameConfig">Jugador</string>
    <string name="text_fechagameconfig">Fecha</string>
    <string name="reglas">Reglas</string>
    <string name="regla1">-Mejor de 3 sets</string>
    <string name="regla2">-Mejor de 6 juegos</string>
    <string name="regla3">-Igualdad Normal</string>
    <string name="regla4">-Mismas reglas en el ultimo set</string>
    <string name="text_button_gameconfig">Empezar</string>
    <string name="categoriaGameConfig">Categoria</string>
    <string name="fechagameconfig">09-10-2017</string>
    <string name="jugador_partidolist">Rafael Nadal</string>
    <string name="set_result_partidolist">0-0</string>
    <string name="fecha_partidolist">09/10/2017</string>
    <string name="categoria_partidolist">Categoria</string>
    <string name="resultado">Resultados:</string>
    <string name="text_button_verestadisticas">Ver Estadisticas</string>

    <string-array name="dropdown_genero">
        <item>Masculino</item>
        <item>Femenino</item>
    </string-array>

    <string-array name="dropdown_mano">
        <item>Derecha</item>
        <item>Izquierda</item>
    </string-array>

    <string-array name="dropdown_categoria">
        <item>Sub-17</item>
        <item>Sub-18</item>
        <item>Sub-21</item>
    </string-array>

    <string-array name="dropdown_sets">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="dropdown_ganador">
        <item>Jugador</item>
        <item>Oponente</item>
    </string-array>

    <string name="title_activity_prueba">PruebaActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="hint_nombre">Nombre</string>
    <string name="hint_edad">Edad</string>
    <string name="hint_apellido">Apellido</string>
    <string name="text_button_agregar">Agregar</string>
    <string name="spinnerSets">Sets</string>
    <string name="title_activity_login2">Sign in</string>

    <string name="error_invalid_user_id">Username invalido</string>
    <string name="error_invalid_password">Contraseña demasiado corta</string>
    <string name="error_incorrect_password">Contraseña invalida</string>
    <string name="error_field_required">Este campo es requerido</string>
    <string name="error_network">Error al conectar a la red</string>
    <string name="text_button_registrar">Registrarse</string>
    <string name="hint_username_registrar">Ingrese username</string>
    <string name="hint_password_registrar">Ingrese contraseña</string>
    <string name="registrar_usuario">Registrar usuario.</string>
    <string name="error_invalid_nombre">Nombre invalido</string>
    <string name="error_invalid_apellido">Apellido invalido</string>
    <string name="error_invalid_edad">Edad invalida</string>
    <string name="error_invalid_genero">Genero invalido</string>
    <string name="error_invalid_mano">Mano invalida</string>
    <string name="text_set">Set:</string>
    <string name="hint_puntajej">Puntaje jugador</string>
    <string name="hint_puntajeo">Puntaje oponente</string>
    <string name="error_invalid_puntaje">Puntaje invalido.</string>
</resources>
