<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.diegovaldesjr.tennistats.GameConfigActivity">

    <include layout="@layout/actionbar_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jugadorGameConfig"
                    android:textSize="@dimen/textsize_jugadorgameconfig" />

                <Spinner
                    android:id="@+id/spinnerJugadorGameconfig"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/primary_light"
                    android:padding="@dimen/spinner_padding"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/categoriaGameConfig"
                    android:textSize="@dimen/textsize_jugadorgameconfig" />

                <Spinner
                    android:id="@+id/spinnerCategoriaGameconfig"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/primary_light"
                    android:entries="@array/dropdown_categoria"
                    android:padding="@dimen/spinner_padding"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_fechagameconfig"
                    android:textSize="@dimen/textsize_jugadorgameconfig"/>

                <TextView
                    android:id="@+id/fechaGameConfig"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fechagameconfig"
                    android:textSize="@dimen/textsize_jugadorgameconfig"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reglas"
                    android:textSize="@dimen/textsize_jugadorgameconfig"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/regla1"
                    android:textSize="@dimen/textsize_jugadorgameconfig"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/regla2"
                    android:textSize="@dimen/textsize_jugadorgameconfig"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/regla3"
                    android:textSize="@dimen/textsize_jugadorgameconfig"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/regla4"
                    android:textSize="@dimen/textsize_jugadorgameconfig"/>

            </LinearLayout>

            <Button
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/text_button_gameconfig"
                android:theme="@style/RaisedButtonDark"
                android:layout_gravity="center_horizontal"
                android:onClick="crearPartido"/>

        </LinearLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
